mongo through flask working on desktop

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
     <div class="container-fluid">
         <div class="jumbotron text-center">
             <h1>Visit the...</h1>
-            <p>Beach. Rainforest. Volcano. Tree House. Sloths.</p>
+            <img src="{{ mars_data.img_large }}" alt="large_mars_image">
     </div>
     
     </div>
